<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/text_view_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_dish" />

    <EditText
        android:id="@+id/edit_text_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dish"
        android:importantForAutofill="no"
        android:inputType=""
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_view_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_restaurant" />

    <EditText
        android:id="@+id/edit_text_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="restaurant"
        android:hint="@string/restaurant"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <Button
        android:id="@+id/button_rate"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_meal" />

    <TextView
        android:id="@+id/text_view_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_restaurant" />


    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>


